--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "0.18.1",
+    "bootstrap": "^5.3.8",
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "core-js": "3.6.5",
