--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@srexi/purecounterjs": "^1.5.0",
     "aos": "^2.3.4",
     "axios": "0.18.1",
     "bootstrap": "^5.3.8",
@@ -28,6 +29,7 @@
     "file-saver": "2.0.1",
     "firebase": "^12.4.0",
     "fuse.js": "3.4.4",
+    "glightbox": "^3.3.1",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
@@ -37,6 +39,7 @@
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
     "sortablejs": "1.8.4",
+    "swiper": "^12.0.2",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
